--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -12,12 +12,11 @@ env:
 
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
-    environment: dev
-     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
        - name: Configure AWS credentials
         run: |
