--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,13 +30,14 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: "app_repo.dkr.ecr.ap-south-1.amazonaws.com"
-          ECR_REPOSITORY: "app_repo"
-          IMAGE_TAG: latest
-        run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+         ECR_REGISTRY: "*****.dkr.ecr.ap-south-1.amazonaws.com"
+         ECR_REPOSITORY: "app_repo"
+         IMAGE_TAG: latest
+       run: |
+         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./app
+         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def-1
