--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: "*****.dkr.ecr.ap-south-1.amazonaws.com"
+          ECR_REGISTRY: "app_repo.dkr.ecr.ap-south-1.amazonaws.com"
           ECR_REPOSITORY: "app_repo"
           IMAGE_TAG: latest
         run: |
