--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -10,6 +10,8 @@ env:
   ECS_SERVICE: app_service
   ECS_TD: .github/workflows/td.json
   ECR_REGISTRY: app_repo.dkr.ecr.ap-south-1.amazonaws.com
+  ECR_REPOSITORY: app_repo
+  IMAGE_TAG: latest
 
 jobs:
   deploy:
